add new api for pharmacy
