# routes/api.php
@@ -14,10 +14,12 @@ Route::group(['namespace' => 'Api'] ,function (){
             Route::post('/update','ProfileController@update')->name('api.account.update');
             Route::post('/update-password','ProfileController@updatePassword');
 
-
             Route::get('/my-orders','ProfileController@myOrders');
             Route::get('/my-orders/{order}','ProfileController@singleOrder');
-
         });
+
+        Route::get('/pharmacies','PharmacyController@index');
+        Route::get('/pharmacies/{pharmacy}','PharmacyController@singlePharmacy');
+
     });
 });
